--- a/MongoDB/package.json
+++ b/MongoDB/package.json
@@ -9,6 +9,8 @@
   "author": "KMH Mubin",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
     "mongoose": "^5.13.2"
   }
 }
