--- a/YelpCamp/package.json
+++ b/YelpCamp/package.json
@@ -9,6 +9,7 @@
   "author": "K M H Mubin",
   "license": "MIT",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.13.0",
     "bs-custom-file-input": "^1.3.4",
     "cloudinary": "^1.26.3",
     "connect-flash": "^0.1.1",
